Refactor- step3 extract the keyframes from the aboutPage to the global.css and update the stats section

--- a/app/globals.css
+++ b/app/globals.css
@@ -329,6 +329,24 @@
   }
 }
 
+@keyframes slideRightToLeft {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+@keyframes slideLeftToRight {
+  0% {
+    transform: translateX(-50%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
 @keyframes gradientShift {
   0% {
     background-position: 0% 50%;
